animate element with style with inline background image

--- a/index.html
+++ b/index.html
@@ -8,6 +8,9 @@
     <title>Document</title>
 </head>
 <body>
-    <a href="./runner.html">RUNNER</a>
+<ul>
+    <li><a href="./runner.html">RUNNER</a></li>
+    <li><a href="./perf_style-attr-bgi.html">perf_style-attr-bgi.html</a></li>
+</ul>
 </body>
 </html>
