Map VS {} VS Object.create(null)

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 <ul>
     <li><a href="./runner.html">RUNNER</a></li>
     <li><a href="./perf_style-attr-bgi.html">perf_style-attr-bgi.html</a></li>
+    <li><a href="./perf_js-map.html">Map VS {} VS Object.create(null)</a></li>
 </ul>
 </body>
 </html>
