page that redirects to another page and a button

--- a/index.html
+++ b/index.html
@@ -13,5 +13,10 @@
     <li><a href="./perf_style-attr-bgi.html">perf_style-attr-bgi.html</a></li>
     <li><a href="./perf_js-map.html">Map VS {} VS Object.create(null)</a></li>
 </ul>
+
+<div>
+    <button onclick="window.open('./navigation/goto-A.html', '_blank');">open new window with redirect</button>
+</div>
+
 </body>
 </html>
