--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     <li><a href="./runner.html">RUNNER</a></li>
     <li><a href="./perf_style-attr-bgi.html">perf_style-attr-bgi.html</a></li>
     <li><a href="./perf_js-map.html">Map VS {} VS Object.create(null)</a></li>
+    <li><a href="./navigation/long-urls.html">Long URLs</a></li>
 </ul>
 
 <div>
